--- a/day1/hohoho/hohoho_backend/package.json
+++ b/day1/hohoho/hohoho_backend/package.json
@@ -7,8 +7,15 @@
   },
   "dependencies": {
     "body-parser": "~1.15.1",
+    "connect-mongo": "^1.2.1",
     "debug": "~2.2.0",
     "express": "~4.13.4",
-    "morgan": "~1.7.0"
+    "express-session": "^1.14.0",
+    "mongoose": "^4.5.3",
+    "mongoose-findorcreate": "^0.1.2",
+    "morgan": "~1.7.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
+    "passport-local": "^1.0.0"
   }
 }
