--- a/day1/trello-backup/skeleton/package.json
+++ b/day1/trello-backup/skeleton/package.json
@@ -12,9 +12,14 @@
     "express": "^4.14.0",
     "express-session": "^1.14.0",
     "hbs": "~4.0.0",
+    "mongoose": "^4.5.4",
     "morgan": "~1.7.0",
     "passport": "^0.3.2",
     "passport-trello": "^0.1.5",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "trello": "^0.5.1"
+  },
+  "devDependencies": {
+    "node-debug": "^0.1.0"
   }
 }
