--- a/day2/hohoho/android/app/build.gradle
+++ b/day2/hohoho/android/app/build.gradle
@@ -87,7 +87,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.hohoho_frontend"
+        applicationId "com.hohoho"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
