--- a/day2/hohoho/ios/hohoho.xcodeproj/xcshareddata/xcschemes/hohoho.xcscheme
+++ b/day2/hohoho/ios/hohoho.xcodeproj/xcshareddata/xcschemes/hohoho.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "hohoho_frontend.app"
-               BlueprintName = "hohoho_frontend"
-               ReferencedContainer = "container:hohoho_frontend.xcodeproj">
+               BuildableName = "hohoho.app"
+               BlueprintName = "hohoho"
+               ReferencedContainer = "container:hohoho.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "hohoho_frontendTests.xctest"
-               BlueprintName = "hohoho_frontendTests"
-               ReferencedContainer = "container:hohoho_frontend.xcodeproj">
+               BuildableName = "hohohoTests.xctest"
+               BlueprintName = "hohohoTests"
+               ReferencedContainer = "container:hohoho.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -47,9 +47,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "hohoho_frontendTests.xctest"
-               BlueprintName = "hohoho_frontendTests"
-               ReferencedContainer = "container:hohoho_frontend.xcodeproj">
+               BuildableName = "hohohoTests.xctest"
+               BlueprintName = "hohohoTests"
+               ReferencedContainer = "container:hohoho.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -57,9 +57,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "hohoho_frontend.app"
-            BlueprintName = "hohoho_frontend"
-            ReferencedContainer = "container:hohoho_frontend.xcodeproj">
+            BuildableName = "hohoho.app"
+            BlueprintName = "hohoho"
+            ReferencedContainer = "container:hohoho.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </TestAction>
@@ -77,9 +77,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "hohoho_frontend.app"
-            BlueprintName = "hohoho_frontend"
-            ReferencedContainer = "container:hohoho_frontend.xcodeproj">
+            BuildableName = "hohoho.app"
+            BlueprintName = "hohoho"
+            ReferencedContainer = "container:hohoho.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -96,9 +96,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "hohoho_frontend.app"
-            BlueprintName = "hohoho_frontend"
-            ReferencedContainer = "container:hohoho_frontend.xcodeproj">
+            BuildableName = "hohoho.app"
+            BlueprintName = "hohoho"
+            ReferencedContainer = "container:hohoho.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
