--- a/day1/hohoho/package.json
+++ b/day1/hohoho/package.json
@@ -7,6 +7,9 @@
   },
   "dependencies": {
     "react": "^15.4.2",
-    "react-native": "^0.41.2"
+    "react-native": "^0.41.2",
+    "react-native-swiper": "^1.5.4",
+    "react-timer-mixin": "^0.13.3",
+    "underscore": "^1.8.3"
   }
 }
