--- a/day1/hohoho/app.json
+++ b/day1/hohoho/app.json
@@ -1,4 +1,23 @@
 {
-  "name": "hohoho",
-  "displayName": "hohoho"
+  "expo": {
+    "name": "hohoho",
+    "description": "An empty new project",
+    "slug": "hohoho",
+    "privacy": "public",
+    "sdkVersion": "18.0.0",
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "primaryColor": "#F5FCFF",
+    "icon": "./assets/icons/app.png",
+    "loading": {
+      "icon": "./assets/icons/loading.png",
+      "hideExponentText": false
+    },
+    "packagerOpts": {
+      "assetExts": ["ttf", "mp4"]
+    },
+    "ios": {
+      "supportsTablet": true
+    }
+  }
 }
