--- a/day1/hohoho/package.json
+++ b/day1/hohoho/package.json
@@ -1,12 +1,14 @@
 {
   "name": "hohoho",
-  "version": "0.0.1",
+  "version": "0.0.0",
+  "description": "Hello Expo!",
+  "author": null,
   "private": true,
-  "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start"
-  },
+  "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
-    "react": "^15.4.2",
-    "react-native": "^0.41.2"
+    "expo": "^18.0.4",
+    "react": "16.0.0-alpha.12",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-18.0.1.tar.gz",
+    "react-navigation": "^1.0.0-beta.11"
   }
 }
