Note on day 1 file structure

--- a/day1/hohoho/app.json
+++ b/day1/hohoho/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "hohoho",
-    "description": "An empty new project",
+    "description": "Like Yo but not",
     "slug": "hohoho",
     "privacy": "public",
     "sdkVersion": "18.0.0",
