--- a/day1/hohoho/app.json
+++ b/day1/hohoho/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "hohoho",
-    "description": "Like Yo but not",
-    "slug": "hohoho",
+    "name": "bitch slap",
+    "description": "for when you really want to slap your friends",
+    "slug": "s l a p",
     "privacy": "public",
     "sdkVersion": "18.0.0",
     "version": "1.0.0",
