--- a/day2/maps/package.json
+++ b/day2/maps/package.json
@@ -9,6 +9,7 @@
     "expo": "^18.0.6",
     "react": "16.0.0-alpha.12",
     "react-native": "https://github.com/expo/react-native/archive/sdk-18.0.1.tar.gz",
+    "react-native-swiper": "^1.5.4",
     "react-navigation": "^1.0.0-beta.11"
   }
 }
