--- a/day1/hohoho/package.json
+++ b/day1/hohoho/package.json
@@ -7,8 +7,10 @@
   "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
     "expo": "^18.0.4",
+    "exponent": "^14.0.0",
     "react": "16.0.0-alpha.12",
     "react-native": "https://github.com/expo/react-native/archive/sdk-18.0.1.tar.gz",
+    "react-native-swiper": "^1.5.4",
     "react-navigation": "^1.0.0-beta.11"
   }
 }
