--- a/day1/hohoho/package.json
+++ b/day1/hohoho/package.json
@@ -9,6 +9,8 @@
     "expo": "^18.0.4",
     "react": "16.0.0-alpha.12",
     "react-native": "https://github.com/expo/react-native/archive/sdk-18.0.1.tar.gz",
+    "react-native-hr": "^1.1.3",
+    "react-native-swiper": "^1.5.4",
     "react-navigation": "^1.0.0-beta.11"
   }
 }
