--- a/day2/maps/week07day2maps/package.json
+++ b/day2/maps/week07day2maps/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hohoho",
+  "name": "week07day2maps",
   "version": "0.0.0",
   "description": "Hello Expo!",
   "author": null,
@@ -8,8 +8,6 @@
   "dependencies": {
     "expo": "^18.0.4",
     "react": "16.0.0-alpha.12",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-18.0.1.tar.gz",
-    "react-native-swiper": "^1.5.4",
-    "react-navigation": "^1.0.0-beta.11"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-18.0.1.tar.gz"
   }
 }
